@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo nocin nosi tw=100
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.20 2007/03/13 08:50:08 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.21 2007/03/13 19:12:25 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/03/13 08:50:08 $ by $Author: brian $
+@c Last Modified $Date: 2007/03/13 19:12:25 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -96,7 +96,7 @@ Major features since the last public release are as follows:
 
 @itemize -
 @item
-Corrections for V401PE loading bug in the X400P-SS7 driver.
+Support for the DS2156 chip present in recent V401PE cards.
 (See @uref{http://www.openss7.org/codefiles/@value{PACKAGE}-@value{VERSION}/BUGS}
 in the release for more information.)
 
